--- a/public/css/style.css
+++ b/public/css/style.css
@@ -565,7 +565,11 @@ marquee {
     font-size: 2.5em;
     /*text-decoration: underline;*/
 }
-
+.contact-main-tel-en {
+    font-weight: 900;
+    font-size: 2.3em;
+    /*text-decoration: underline;*/
+}
 .contact-main-tel a {
     color: #2366a5;
 }
