--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
 
 body {
     font-family: 'PT Sans', sans-serif;
@@ -680,86 +681,13 @@ marquee {
 
 @media screen and (max-width: 1000px) {
 
-    nav.navbar {
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .cont-w-100 {
-        max-width: 100vw !important;
-    }
-
-    .mrsu-logo-blue, .mrsu-eye-blue {
-        display: none;
-    }
-
-    .navbar-nav .nav-item .dropdown-menu {
-        width: 100% !important;
-        border: none !important;
-        text-align: center;
-    }
-
-    .foreign-link {
-        font-size: 24px;
-    }
-
-    .foreign-link {
-        color: white;
-    }
-
-    .hamburger {
-        padding: 0 !important;
-        height: 24px !important;
-    }
-
-    .hamburger-box {
-        width: 30px !important;
-    }
-
-    .hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
-        background-color: white !important;
-        font-size: 0.2rem;
-        width: 30px !important;
-    }
-
-    .mrsu-logo-img {
-        width: auto;
-        height: 45px;
-    }
-
-    .cont-w-100 {
-        max-width: 100vw !important;
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    .link-section {
-        padding-top: 10px !important;
-        padding-bottom: 10px !important;
-    }
-
-    .cont-w-100 {
-        max-width: 100vw !important;
-    }
-
-    .carousel-item {
-        height: 250px;
-    }
-
-    .padding-0 {
-        padding-top: 0 !important;
-    }
-}
-
-@media screen and (max-width: 1000px) {
-
     .examInfo, .exam-info-bottom {
         font-size: 16px;
     }
 
-    .carousel-item {
-        height: 250px !important;
-    }
+    /*.carousel-item {*/
+    /*    height: 250px !important;*/
+    /*}*/
 
     .foreign-link {
         color: white;
@@ -819,9 +747,76 @@ marquee {
     .padding-0 {
         padding-top: 0 !important;
     }
+
+    .link-section {
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+    }
+
+    .cont-w-100 {
+        max-width: 100vw !important;
+    }
+
+    /*.carousel-item {*/
+    /*    height: 250px;*/
+    /*}*/
+
+    .padding-0 {
+        padding-top: 0 !important;
+    }
+    nav.navbar {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .cont-w-100 {
+        max-width: 100vw !important;
+    }
+
+    .mrsu-logo-blue, .mrsu-eye-blue {
+        display: none;
+    }
+
+    .navbar-nav .nav-item .dropdown-menu {
+        width: 100% !important;
+        border: none !important;
+        text-align: center;
+    }
+
+    .foreign-link {
+        font-size: 24px;
+    }
+
+    .foreign-link {
+        color: white;
+    }
+
+    .hamburger {
+        padding: 0 !important;
+        height: 24px !important;
+    }
+
+    .hamburger-box {
+        width: 30px !important;
+    }
+
+    .hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
+        background-color: white !important;
+        font-size: 0.2rem;
+        width: 30px !important;
+    }
+
+    .mrsu-logo-img {
+        width: auto;
+        height: 45px;
+    }
+
+    .cont-w-100 {
+        max-width: 100vw !important;
+    }
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 991px) {
     .header {
         background-color: #2366a5;
     }
@@ -838,12 +833,10 @@ marquee {
     .navbar-nav .nav-item .dropdown-menu .dropdown-menu {
         background-color: #0d345b !important;
     }
-}
+    /*.carousel{*/
+    /*	display: none;*/
+    /*}*/
 
-@media screen and (max-width: 991px) {
-	.carousel{
-		display: none;
-	}
     .section-content-block {
         display: flex;
         flex-direction: column-reverse;
@@ -851,9 +844,9 @@ marquee {
 }
 
 @media screen and (max-width: 375px) {
-    .carousel-item {
-        height: 200px !important;
-    }
+    /*.carousel-item {*/
+    /*    height: 200px !important;*/
+    /*}*/
 
     .padding-0 {
         padding-top: 0 !important;
@@ -861,11 +854,72 @@ marquee {
 }
 
 @media screen and (max-width: 320px) {
-    .carousel-item {
-        height: 150px !important;
-    }
+    /*.carousel-item {*/
+    /*    height: 150px !important;*/
+    /*}*/
 
     .padding-0 {
         padding-top: 0 !important;
+    }
+    .img_main, .img_ipad{
+        display:none!important;
+    }
+    .img_mobile{
+        display:block!important;
+    }
+    .carousel-item {
+        height:100%;
+    }
+}
+
+/*Правила для картинок карусели*/
+@media screen and (min-width:992px) and (max-width:1199px){
+    .carousel-item {
+        height: 335px !important;
+    }
+}
+@media screen and (min-width:992px){
+    .img_ipad, .img_mobile{
+        display:none!important;
+    }
+    .img_main{
+        display:block!important;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:991px){
+    .img_main, .img_mobile{
+        display:none!important;
+    }
+    .img_ipad{
+        display:block!important;
+    }
+}
+@media screen and (min-width:576px) and (max-width:767px){
+    .carousel-item {
+        height: 295px !important;
+    }
+}
+
+@media screen and (min-width:466px) and (max-width:575px){
+    .carousel-item {
+        height: max-content !important;
+    }
+    .img_main, .img_ipad{
+        display:none!important;
+    }
+    .img_mobile{
+        display:block!important;
+    }
+}
+@media screen and (min-width:320px) and (max-width:466px){
+    .carousel-item {
+        height:100%;
+    }
+    .img_main, .img_ipad{
+        display:none!important;
+    }
+    .img_mobile{
+        display:block!important;
     }
 }
