--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,13 @@ body {
     margin-bottom: 2rem;
 }
 
+a:not(.collapsed) .rotate-icon {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+.header-acord{
+
+}
 .table-stat thead {
     background-color: #e9eff6;
     color: #2366a5;
