--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,13 +4,17 @@
 body {
     font-family: 'PT Sans', sans-serif;
     outline: none !important;
+    --main-color: #2366a5;
+    --table-color:#e9eff6;
 }
+a:hover{
 
+}
 #square {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #2366a5;
+    background-color: var(--main-color);
     color: white;
     z-index: 1000;
     padding: 10px 15px;
@@ -31,12 +35,12 @@ body {
 }
 
 .mrsu-bg {
-    background-color: #2366a5;
+    background-color: var(--main-color);
 }
 
 .mrsu-bg-button {
-    background-color: #2366a5;
-    border-color: #2366a5;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
 }
 
 .mrsu-uppertext {
@@ -60,12 +64,12 @@ a:not(.collapsed) .rotate-icon {
 
 }
 .table-stat thead {
-    background-color: #e9eff6;
-    color: #2366a5;
+    background-color: var( --table-color);
+    color: var(--main-color);
 }
 
 .legend {
-    color: #2366a5;
+    color: var(--main-color);
     font-size: 14px !important;
     text-decoration: underline
 }
@@ -89,7 +93,7 @@ a:not(.collapsed) .rotate-icon {
 }
 
 .main-nav {
-    background-color: #2366a5 !important;
+    background-color: var(--main-color) !important;
 }
 
 .main-nav button span {
@@ -156,10 +160,10 @@ a:not(.collapsed) .rotate-icon {
     width: calc(0.8*30px);
     height: calc(0.8*30px);
     margin: 8px;
-    border: 3px solid #2366a5;
+    border: 3px solid var(--main-color);
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #2366a5 transparent transparent transparent;
+    border-color: var(--main-color) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
     animation-delay: -0.45s;
@@ -190,7 +194,7 @@ a:not(.collapsed) .rotate-icon {
 }
 
 .mrsu-card > ul {
-    color: #2366a5;
+    color: var(--main-color);
     font-size: 12px;
 }
 
@@ -200,7 +204,7 @@ a:not(.collapsed) .rotate-icon {
 
 .navbar .dropdown-menu {
     z-index: 100;
-    background-color: #2366a5 !important;
+    background-color: var(--main-color) !important;
     color: white !important;
     width: 300px !important;
     top: 46px !important;
@@ -228,7 +232,7 @@ a:not(.collapsed) .rotate-icon {
 
 .title-text {
     font-size: 13px;
-    color: #2366a5;
+    color: var(--main-color);
     background-color: white;
 }
 
@@ -241,7 +245,7 @@ a:not(.collapsed) .rotate-icon {
 }
 
 .infoblock-card .card-body {
-    background-color: #2366a5;
+    background-color: var(--main-color);
     color: white;
     padding: 5px;
     font-size: 13px;
@@ -253,16 +257,16 @@ a:not(.collapsed) .rotate-icon {
 
 .list-sections li {
     padding: 5px 10px;
-    background-color: #2366a5;
+    background-color: var(--main-color);
 }
 
 .bold-border-imp {
-    border-bottom: 2px solid #2366a5 !important;
+    border-bottom: 2px solid var(--main-color) !important;
 }
 
 .bold-border-right-imp {
-    border-bottom: 2px solid #2366a5 !important;
-    border-right: 2px solid #2366a5 !important;
+    border-bottom: 2px solid var(--main-color) !important;
+    border-right: 2px solid var(--main-color) !important;
 }
 
 /*.navbar-toggler {*/
@@ -276,7 +280,7 @@ a:not(.collapsed) .rotate-icon {
 
 .infoblock-card .card-footer ul li a {
     font-style: italic;
-    color: #2366a5;
+    color: var(--main-color);
     font-size: 13px;
 }
 
@@ -288,7 +292,7 @@ a:not(.collapsed) .rotate-icon {
     content: "—";
     position: relative;
     left: -5px;
-    color: #2366a5;
+    color: var(--main-color);
 }
 
 .base-exams-table thead tr td {
@@ -309,7 +313,7 @@ a:not(.collapsed) .rotate-icon {
 }
 
 .bac-mag .nav-link:hover {
-    color: #2366a5 !important;
+    color: var(--main-color) !important;
 }
 
 .form-row button {
@@ -323,7 +327,7 @@ a:not(.collapsed) .rotate-icon {
 }
 
 .bac-mag .form-inline input {
-    border: 1px solid #2366a5;
+    border: 1px solid var(--main-color);
     width: 300px;
 }
 
@@ -343,7 +347,7 @@ a:not(.collapsed) .rotate-icon {
 
 .examInfo {
     background-color: rgba(35, 102, 165, 0.1);
-    color: #2366a5;
+    color: var(--main-color);
     font-size: 18px;
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
@@ -355,7 +359,7 @@ a:not(.collapsed) .rotate-icon {
     width: 100%;
     padding: 16px;
     color: white;
-    background-color: #2366a5;
+    background-color: var(--main-color);
     font-size: 18px;
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
@@ -383,9 +387,9 @@ a:not(.collapsed) .rotate-icon {
 }
 
 marquee {
-    border-bottom: 1px solid #2366a5;
-    border-top: 1px solid #2366a5;
-    color: #2366a5;
+    border-bottom: 1px solid var(--main-color);
+    border-top: 1px solid var(--main-color);
+    color: var(--main-color);
 }
 
 .content-page img {
@@ -464,12 +468,12 @@ marquee {
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.32);
     /*border-top: 50px solid #007ed0;*/
     height: 75px;
-    background-color: #2366a5;
+    background-color: var(--main-color);
     color: #FFFFFF;
 }
 
 .files-stat {
-    color: #2366a5;
+    color: var(--main-color);
 }
 
 .inputGroup {
@@ -480,7 +484,7 @@ marquee {
 }
 
 .foreign-link {
-    color: #2366a5;
+    color: var(--main-color);
     font-size: 24px;
 }
 
@@ -563,11 +567,11 @@ marquee {
 }
 
 .table-b-border {
-    border: 2px solid #2366a5;
+    border: 2px solid var(--main-color);
 }
 
 .nps-tr {
-    border-top: 1px solid #2366a5;
+    border-top: 1px solid var(--main-color);
 }
 
 .nps-tr td {
@@ -580,7 +584,7 @@ marquee {
 }
 
 .border-priem {
-    border: 1px solid #2366a5 !important;
+    border: 1px solid var(--main-color) !important;
 }
 
 .swith-priem {
@@ -589,12 +593,12 @@ marquee {
 }
 
 .swith-priem a {
-    color: #2366a5;
+    color: var(--main-color);
     border-radius: 0 !important;
 }
 
 .swith-priem a.active {
-    background-color: #2366a5 !important;
+    background-color: var(--main-color) !important;
 }
 
 .course-name:first-child {
@@ -657,7 +661,7 @@ marquee {
     /*text-decoration: underline;*/
 }
 .contact-main-tel a {
-    color: #2366a5;
+    color: var(--main-color);
 }
 
 .contact-div {
@@ -721,15 +725,15 @@ marquee {
 }
 
 .table-scores td, .table-scores th {
-    border: 1px solid #2366a5;
+    border: 1px solid var(--main-color);
 }
 
 .table-ovz-select thead th {
-    border: 1px solid #2366a5;
+    border: 1px solid var(--main-color);
 }
 
 .faculty-head {
-    color: #2366a5;
+    color: var(--main-color);
 }
 
 .dropdown-item:focus, .dropdown-item:hover, .dropdown-item:active {
@@ -744,7 +748,7 @@ marquee {
 }
 
 .table-scores thead tr th {
-    background-color: #2366a5 !important;
+    background-color: var(--main-color) !important;
     text-transform: uppercase;
     font-weight: normal;
     padding: 8px;
@@ -753,11 +757,11 @@ marquee {
 }
 
 .table-scores tr td button {
-    color: #2366a5 !important;
+    color: var(--main-color) !important;
 }
 
 .main-color {
-    color: #2366a5 !important
+    color: var(--main-color) !important
 }
 
 .dropdown-menu a.nav-link.text-white:active {
@@ -903,7 +907,7 @@ marquee {
 
 @media screen and (max-width: 991px) {
     .header {
-        background-color: #2366a5;
+        background-color: var(--main-color);
     }
 
     /* #184d80 */
