--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
-
+/*html {*/
+/*    margin-left: calc(100vw - 100%);*/
+/*    margin-right: 0;*/
+/*    overflow: auto*/
+/*}*/
 body {
     font-family: 'PT Sans', sans-serif;
     outline: none !important;
