--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -117,8 +117,8 @@ body {
     height: fit-content;
 }
 .carousel-item img{
-    filter: grayscale(100%) contrast(100%);
-
+    /*filter: grayscale(100%) contrast(100%);*/
+    filter: brightness(0) contrast(50%);
 }
 .header {
     background-color: white;
@@ -501,12 +501,16 @@ marquee {
 .files-list li img {
     width: 60px;
     margin-right: 20px;
+    filter: brightness(0) contrast(50%);
+
 }
 
 .file-link-div a {
     color: #1b4b72;
 }
-
+.btn-primary{
+    background-color: #000;
+}
 
 .vh {
     height: 100vh !important;
@@ -841,12 +845,9 @@ marquee {
     }
 
     .mrsu-logo-img {
-        width: 0;
+       display:none;
     }
 
-    .mrsu-logo-img-ovz {
-        width: 800px;
-    }
 
     .main-nav button span {
         color: #000000;
@@ -1148,10 +1149,7 @@ marquee {
         width: 30px !important;
     }
 
-    .mrsu-logo-img {
-        width: auto;
-        height: 36px;
-    }
+
 
     .cont-w-100 {
         max-width: 100vw !important;
@@ -1203,10 +1201,6 @@ marquee {
         width: 30px !important;
     }
 
-    .mrsu-logo-img {
-        width: auto;
-        height: 36px;
-    }
 
     .container-fluid {
         padding: 1.5rem !important;
@@ -1423,7 +1417,7 @@ div.logo img {
 }
 
 .logo-text {
-    color: #fff;
+    color: #000;
     font-weight: bold;
     font-size: 18px;
     text-transform: uppercase;
@@ -1512,7 +1506,7 @@ div.menu {
     font-weight: bold;
     font-size: 18px;
     text-transform: uppercase;
-    color: #fff;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -1535,9 +1529,10 @@ div.buttons {
 .search {
     transform: rotate(80deg);
     font-size: 18px;
-    color: #fff;
+    color: #000000;
     margin-right: 15px;
     margin-bottom: -3px;
+    cursor: pointer;
     cursor: pointer;
 }
 
@@ -1546,7 +1541,7 @@ div.buttons {
 }
 
 .see a {
-    color: #fff;
+    color: #000000;
 }
 
 #main_version a {
@@ -1622,7 +1617,7 @@ div.buttons {
 #menu__toggle:checked ~ .menu__btn > span,
 #menu__toggle:checked ~ .menu__btn > span::before,
 #menu__toggle:checked ~ .menu__btn > span::after {
-    background-color: #fff;
+    background-color: #000000;
 }
 
 .menu__btn > span,
@@ -1632,7 +1627,7 @@ div.buttons {
     position: absolute;
     width: 20px;
     height: 4px;
-    background-color: #fff;
+    background-color: #000000;
     transition-duration: .25s;
     border-radius: 2px;
 }
@@ -1656,7 +1651,7 @@ div.buttons {
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: var(--main-color);
+    background-color: #fff;
     transition-duration: .25s;
     overflow-x: auto;
     box-sizing: border-box;
@@ -1684,7 +1679,7 @@ div.buttons {
 }
 
 .hamburger__menu > li > a {
-    color: #fff;
+    color: #000000;
     font-size: 18px;
     font-weight: bold;
     text-transform: uppercase;
@@ -1696,10 +1691,11 @@ div.buttons {
 }
 
 .hamburger__submenu {
-    list-style-image: url('/storage/images/mrsu2021/defis-light.svg');
+    list-style-image: url('/storage/images/mrsu2021/defis-dark.svg');
     padding-left: 20px;
-    color: var(--sandwich-link);
+    color: #000;
     margin-top: 10px;
+    line-height: 1.2;
 }
 
 .test__two {
@@ -1708,7 +1704,7 @@ div.buttons {
 }
 
 .hamburger__submenu > li > a {
-    color: var(--sandwich-link);
+    color: #000;
     text-decoration: none;
     font-size: 17px;
 }
@@ -1724,7 +1720,7 @@ div.buttons {
 }
 
 .hamburger__search form {
-    border-bottom: 2px solid #e0eaff;
+    border-bottom: 2px solid #000000;
     color: var(--sandwich-link);
     padding: 5px 10px;
     display:none;
@@ -1929,7 +1925,7 @@ div.buttons {
 
 .second-row a {
     margin-left: 20px;
-    color: #aaa;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -1938,7 +1934,7 @@ div.buttons {
 }
 
 .second-row a i {
-    color: #fff;
+    color: #000000;
     margin-right: 10px;
     font-size: 18px;
 }
@@ -1946,7 +1942,7 @@ div.buttons {
 /* -------------------------- языковой панель - начало ------------------------------ */
 .topmenu {
     position: relative;
-    color: #fff;
+    color: #000000;
     z-index: 1;
     font-size: 17px;
     font-weight: bold;
@@ -1966,7 +1962,7 @@ div.buttons {
 }
 
 .submenu a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
 }
 
