--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ html {
 body {
     font-family: 'PT Sans', sans-serif;
     outline: none !important;
-    --main-color: #2366a5;
+    --main-color: #0066a9;
     --table-color: #e9eff6;
     --footer-back: rgb(239, 239, 239);
     --footer-back-dark: #dadada;
@@ -128,11 +128,6 @@ body {
     text-transform: uppercase;
 }
 
-.mrsu-logo-img {
-    /*width: 342px;*/
-    height: 45px;
-}
-
 .table-stat {
     margin-bottom: 2rem;
 }
@@ -158,7 +153,7 @@ a:not(.collapsed) .rotate-icon {
 }
 
 .mrsu-logo-img-ovz {
-    width: 0;
+   display:none;
 }
 
 .h1-mrsu {
@@ -1135,11 +1130,6 @@ marquee {
         width: 30px !important;
     }
 
-    .mrsu-logo-img {
-        width: auto;
-        height: 45px;
-    }
-
     .container-fluid {
         padding-left: 1.5rem !important;
         padding-right: 1.5rem !important;
@@ -1226,10 +1216,6 @@ marquee {
         width: 30px !important;
     }
 
-    .mrsu-logo-img {
-        width: auto;
-        height: 45px;
-    }
 
     .cont-w-100 {
         max-width: 100vw !important;
