--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1703,7 +1703,7 @@ div.buttons {
     flex-flow: row wrap;
     justify-content: space-between;
     width: 100%;
-    max-height: 890px;
+    /*max-height: 890px;*/
     list-style: none;
     margin-top: 20px!important;
 }
