--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,12 +30,13 @@ body {
     --sandwich-link: #e0eaff;
     --sandwich-footer: rgba(255, 255, 255, .7);
 }
+
 .preloader {
     position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 999999;
     display: flex;
     align-items: center;
@@ -48,6 +49,50 @@ body {
 .preloader-remove {
     opacity: 0;
     z-index: -10;
+}
+
+.preloader-5 {
+    display: block;
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: 30px auto;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: var(--main-color);
+    animation: preloader-5-spin 2s linear infinite;
+}
+.preloader-5:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #61a8d6;
+    animation: preloader-5-spin 3s linear infinite;
+}
+.preloader-5:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #3a7398;
+    animation: preloader-5-spin 1.5s linear infinite;
+}
+@keyframes preloader-5-spin {
+    0%   {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 
