--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1546,6 +1546,7 @@ a.logo {
     .lang {
         display: block;
     }
+
     .head .row .column:first-child {
         width: 100%;
     }
@@ -1568,7 +1569,9 @@ a.logo {
         display: none;
     }
 }
-
+.hamburger__search input {
+    outline: none;
+}
 .lk {
     display: none;
     position: absolute;
