--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1600,7 +1600,7 @@ div.menu {
 .nav p {
     margin: 0;
 }
-.nav a {
+.menu .nav a {
     font-weight: bold;
     font-size: 18px;
     text-transform: uppercase;
